# LibraX-CLI

./: CMakeLists.txt
src/: main.cpp
src/model/: Book.cpp  Book.h  User.cpp  User.h
src/util/menu/: MenuItem.cpp  MenuItem.h  MenuOption.cpp  MenuOption.h
src/util/screen/: Screen.cpp  Screen.h
src/util/sql/: Database.cpp  Database.h
